--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,11 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Core\\": "core/"
         },
         "files": [
-            "app/Support/helpers.php"
+            "core/Support/helpers.php"
         ]
     }
 }
