--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
     "require": {
+        "php": "^7.4",
+        "ext-json": "*",
         "twig/twig": "^3.0",
         "react/http": "^0.8.7",
         "vlucas/phpdotenv": "^5.0",
-        "nikic/fast-route": "^1.3",
-        "ext-json": "*"
+        "nikic/fast-route": "^1.3"
     },
     "autoload": {
         "psr-4": {
