--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,10 @@
         "php": "^7.4",
         "ext-json": "*",
         "twig/twig": "^3.0",
-        "react/http": "^0.8.7",
+        "react/http": "^1.1",
         "vlucas/phpdotenv": "^5.0",
-        "nikic/fast-route": "^1.3"
+        "nikic/fast-route": "^1.3",
+        "christoph-kluge/reactphp-http-cors-middleware": "^2.0"
     },
     "autoload": {
         "psr-4": {
