--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,26 @@
 {
+    "name": "nddcoder/rest",
+    "type": "project",
+    "description": "The Rest Framework.",
+    "keywords": [
+        "framework",
+        "rest"
+    ],
+    "license": "MIT",
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true
+    },
     "require": {
-        "php": "^7.4",
-        "ext-json": "*",
-        "twig/twig": "^3.0",
-        "react/http": "^1.1",
-        "vlucas/phpdotenv": "^5.0",
-        "nikic/fast-route": "^1.3",
-        "christoph-kluge/reactphp-http-cors-middleware": "^2.0"
+        "php": "^7.4|^8.0",
+        "nddcoder/rest-framework": "^1.0"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
-            "Core\\": "core/"
-        },
-        "files": [
-            "core/Support/helpers.php"
-        ]
-    }
+            "App\\": "app/"
+        }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
