Ignored composer.lock

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-vendor
-.git
-.idea
+/vendor
+composer.phar
+composer.lock
+.DS_Store
+Thumbs.db
+/phpunit.xml
+/.idea
+/.vscode
+.phpunit.result.cache
 .env
