--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "sort-packages": true
     },
     "require": {
-        "php": "^7.4|^8.0",
-        "nddcoder/rest-framework": "^1.1"
+        "php": "^8.0",
+        "nddcoder/rest-framework": "^1.3.1"
     },
     "autoload": {
         "psr-4": {
